[package]
name = "braille"
readme = "README.md"
repository = "https://github.com/segeljakt/braille"
homepage = "https://github.com/segeljakt/braille"
description = "Rust crate for generating Braille and box-drawing characters."
version = "1.0.2"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"
license = "MIT"

[build-dependencies]
